Add and remove items

--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
   </head>
   <body>
     <main>
-      <ul class="books-wrapper"></ul>
+      <ul class="books-wrapper">
+
+      </ul>
 
       <div class="books-generator">
-        <input type="text" placeholder="Title" />
-        <input type="text" placeholder="Auther" />
-        <button>Add</button>
+        <input type="text" placeholder="Title" class="title" />
+        <input type="text" placeholder="Auther"  class="author"/>
+        <button class="add">Add</button>
       </div>
     </main>
     <script src="./index.js"></script>
