Add addition, deletion & ls logic & styles

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       <ul class="books-wrapper"></ul>
 
       <div class="books-generator">
-        <input type="text" placeholder="Title" />
-        <input type="text" placeholder="Auther" />
-        <button>Add</button>
+        <input class="title" type="text" placeholder="Title" />
+        <input class="auther" type="text" placeholder="Auther" />
+        <button class="add-book">Add</button>
       </div>
     </main>
     <script src="./index.js"></script>
