--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <input class="auther" type="text" placeholder="Auther" />
         <button class="add-book">Add</button>
       </div>
+      <div class="book-added">Book Added Successfuly</div>
+      <div class="error-msg">Please Fill in all the form fields</div>
     </main>
-    <script src="./index.js"></script>
+    <script src="./classes.js"></script>
   </body>
 </html>
