remove book logic

--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
       <div class="error-msg">Please Fill in all the form fields</div>
     </main>
     <script src="./classes.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
