--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
   </head>
   <body>
     <main>
-      <ul class="books-wrapper">
-
-      </ul>
-
-      <div class="books-generator">
-        <input type="text" placeholder="Title" class="title" />
-        <input type="text" placeholder="Auther"  class="author"/>
-        <button class="add">Add</button>
-      </div>
-    </main>
-    <script src="./index.js"></script>
+      <main>
+        <ul class="books-wrapper"></ul>
+  
+        <div class="books-generator">
+          <input class="title" type="text" placeholder="Title" />
+          <input class="auther" type="text" placeholder="Auther" />
+          <button class="add-book">Add</button>
+        </div>
+        <div class="book-added">Book Added Successfuly</div>
+        <div class="error-msg">Please Fill in all the form fields</div>
+      </main>
+      <script src="./classes.js"></script>
   </body>
 </html>
