Fix Linters errors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <h1>Awesome Books</h1>
       <nav>
-        <ul class="nav-list" onclick="activeLink(event)">
+        <ul class="nav-list">
           <li class="nav-pill list active">List</li>
           <li class="nav-pill add-new">Add new</li>
           <li class="nav-pill contact">Contact</li>
@@ -42,7 +42,7 @@
         <ul>
           <li>My email mokhaled.work@gmail.com</li>
           <li>My phone number +201029872460</li>
-          <li>My github <a href="https://github.com/z4cope">@Mokhaled</a></li>
+          <li>My github <a href="https://github.com/z4cope">@MoKhaled</a></li>
         </ul>
       </section>
     </main>
